# quarkus-bazel-example

./: .gitignore  README.md  WORKSPACE
backend/hello/: BUILD.bazel
backend/hello/src/main/java/com/example/: HelloWorldMain.java
bazel/: deps.bzl  maven.bzl
docs/: build.md  instalation.md
